--- a/prepros.config
+++ b/prepros.config
@@ -69,7 +69,9 @@
           "*.turf",
           "*.ts"
         ],
-        "exceptions": []
+        "exceptions": [
+          "src/scss/style.scss"
+        ]
       }
     },
     "uploader": {
